# JUCE-without-PROJUCER

./: CMakeLists.txt
cmake/: cpm.cmake
plugin/: CMakeLists.txt
